--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         my friend then this 3d printed model is for my Big Brother
       </p>
       <img src="3dModel.jpg" alt="" width="800" height="600" />
+      <p>this is also me with a lousy hair</p>
+      <img src="MeLousyHair.jpg" alt="" />
     </section>
     <footer>
       <h4>About me</h4>
