updates again final

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         Here is a picture of what i print in the 3d printer the model was from
         my friend then this 3d printed model is for my Big Brother
       </p>
-      <img src="3dModel.jpg" alt="" width="800" height="600" />
+      <img src="3dModel.jpg" alt="" />
       <p>this is also me with a lousy hair</p>
       <img src="MeLousyHair.jpg" alt="" />
     </section>
