--- a/index.html
+++ b/index.html
@@ -4,55 +4,85 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="bg-antiquewhite">
     <main>
-      <header>
+      <header class="text-center">
         <h1>This is my First WebPage well not technically</h1>
       </header>
-      <p>
+      <p class="text-center text-24px">
         My Name is Albert John B. Santos the reason i want to learn programming
+        <br />
         is indeed steep learning curve but there is a fun in it so i picked it.
         <br />
         imagine the finish product that will help you evantually in the future.
       </p>
-      <p>
+      <p class="text-center" style="font-size: 20px">
         <a href="https://jinwu09.github.io/Portfolio_Jinwu/#/Home"
           >Here is my Personal Portfolio well it is not technically finish.</a
         >
       </p>
     </main>
-    <section>
+    <section class="text-18px">
       here is few things about me.
       <ul>
         <li>i want to be fit so i added regular exersice.</li>
         <li>i am proficient on VS code shortcuts.</li>
         <li>
           I really want to learn figma so badly that i am having hard time to
+          <br />
           understand.
         </li>
         <li>
           by the future i want to mod my very own car cause i was influenced by
+          <br />
           it and it looks a good hobby but expensive.
         </li>
         <li>do i need to add more nah huhu.</li>
       </ul>
     </section>
     <section>
-      <p>
-        Here is a picture of what i print in the 3d printer the model was from
-        my friend then this 3d printed model is for my Big Brother
-      </p>
-      <img src="3dModel.jpg" alt="" />
-      <p>this is also me with a lousy hair</p>
-      <img src="MeLousyHair.jpg" alt="" />
+      <table>
+        <tr>
+          <th>
+            <p>
+              Here is a picture of what i print in the 3d printer the model was
+              from
+              <br />
+              my friend then this 3d printed model is for my Big Brother
+            </p>
+            <div>
+              <img src="3dModel.jpg" alt="" width="550" height="350" />
+            </div>
+          </th>
+          <th>
+            <p>this is also me with a lousy hair</p>
+            <img src="MeLousyHair.jpg" alt="" width="300" height="400" />
+          </th>
+
+          <th></th>
+        </tr>
+      </table>
     </section>
-    <footer>
-      <h4>About me</h4>
-      <p>Name: Albert John B. Santos</p>
-      <p>School Year and Block: BSCS 3A</p>
-      <p>hmmm that is all.</p>
+    <section class="text-center">
+      <h1 id="fontweight">Description</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos ea
+        <br />
+        aliquid eveniet minus sit, sequi maxime quia, doloribus exercitationem
+        <br />
+        ipsa nobis! Incidunt aperiam officia molestias quam deserunt, recusandae
+        <br />
+        iusto error. <br />
+      </p>
+    </section>
+    <footer class="text-center">
+      <h4 class="">Contact section</h4>
+      <p class="">Name: Albert John B. Santos</p>
+      <p class="">School Year and Block: BSCS 3A</p>
+      <p class="">hmmm that is all.</p>
     </footer>
   </body>
 </html>
